--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -38,12 +38,12 @@ jobs:
     needs: [yamllint, asknancy]
     strategy:
       matrix:
-        go-version: [1.17.x]
+        go-version: [1.21.x, 1.22.x]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Install Go ${{ matrix.go-version }}
-        uses: actions/setup-go@v3.5.0
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
       - name: Checkout code
