--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -61,10 +61,7 @@ jobs:
             ${{ runner.os }}-go-
       - name: Run linter and tests
         run: make test-coverage-custom
-      - name: Update code coverage
-        uses: codecov/codecov-action@v3.1.1
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          flags: unittests
-          fail_ci_if_error: true # optional (default = false)
-          verbose: true # optional (default = false)
