--- a/codecov.yml
+++ b/codecov.yml
@@ -27,10 +27,10 @@ ignore:
 parsers:
   gcov:
     branch_detection:
-      conditional: yes
-      loop: yes
-      method: no
-      macro: no
+      conditional: true
+      loop: true
+      method: false
+      macro: false
 
 # Pull request comments:
 # ----------------------
