--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,5 @@
+---
 # These are supported funding model platforms
 
-github: GorillaPool
-custom: https://junglebus.gorillapool.io/?utm_source=github&utm_medium=sponsor-link&utm_campaign=go-junglebus&utm_term=go-junglebus&utm_content=go-junglebus
+github: b-open-io
+custom: https://junglebus.b-open-io.io/?utm_source=github&utm_medium=sponsor-link&utm_campaign=go-junglebus&utm_term=go-junglebus&utm_content=go-junglebus
