--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -4,7 +4,7 @@ description: Got a new feature, improvment or idea?
 title: "[Feature]: "
 labels: [feature]
 assignees:
-  - mrz1836
+  - rohenaz
 body:
   - type: textarea
     id: what-feature
