--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -22,6 +22,7 @@ rules:
   # Other common annoyances
   trailing-spaces: disable
   line-length: disable
+  new-line-at-end-of-file: disable
   indentation:
     spaces: 2
     indent-sequences: true
