--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -25,8 +25,8 @@ changelog:
 # ---------------------------
 # Builder
 # ---------------------------
-build:
-  skip: true
+builds:
+  - skip: true
 
 # ---------------------------
 # Github Release
