fix: update goreleaser config to v2 and remove announcements

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,11 +2,15 @@
 # ---------------------------
 # General
 # ---------------------------
+version: 2
+
 before:
   hooks:
     - make all
+
 snapshot:
   name_template: "{{ .Tag }}"
+
 changelog:
   sort: asc
   filters:
