--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -22,9 +22,9 @@ changelog:
 # ---------------------------
 # Publishers
 # ---------------------------
-# publishers:
-#  - name: "Publish GoDocs"
-#    cmd: make godocs
+publishers:
+  - name: "Publish GoDocs"
+    cmd: make godocs
 
 # ---------------------------
 # Builder
